ani.gamer.user.css
/* ==UserStyle==
 * @name         巴哈姆特動畫瘋 - 純黑主題
 * @namespace    http://www.w3.org/1999/xhtml;
 * @version      1.0.1
 * @license      MIT
 * @preprocessor default
 * ==/UserStyle== */
@-moz-document domain(ani.gamer.com.tw) {
    body {
        /*背景圖片，修改【  url(這裡是圖片網址) !important;  即可】*/
        /*固定位置*/
        /*對齊位置*/
        /*不重複*/
        /*圖片大小*/
        /* background-image: url(https://i.imgur.com/C9U56BI.jpg) !important;
         *      background-attachment: fixed  !important;
         *      background-position: center center!important;
         *      background-repeat: no-repeat !important;
         *      background-size: cover !important; */
        /*背景顏色*/
        background-color: #2a2a2a !important;
        color: #d7d7d7 !important;
    }
    /*動畫瘋深色主題*/
    /*上層*/
    .sky {
        background-color: inherit !important;
    }
    .mainmenu {
        background-color: inherit !important;
    }
    .mainmenu li {
        border-top: 1px solid rgba(0, 0, 0, 0);
        background-color: inherit !important;
    }
    .search input,
    .search input[type="text"]:focus,
    .search input[type="text"]:hover {
        background-color: inherit !important;
    }
    /*下層*/
    .footer {
        background-color: transparent;
    }
    /*文字*/
    body,
    .ACG-score span,
    .ACG-persent span {
        color: #d7d7d7 !important;
    }
    .ACG-rbox4B {
        color: #b4edff;
    }
    .ACG-score {
        color: #b4edff;
        border: 10px solid rgba(180, 237, 255, 0.5);
    }
    .title {
        color: #d7d7d7 !important;
    }
    .week_item_click span{
        color: inherit !important;
    }
    .week_item_click:hover{
        color:#00B4D8 !important;
    }
    .info {
        background-color: transparent !important;
    }
    .anime_btn_more i, .animelook i{
        background-color: transparent !important;
    }
    .anime_btn_more i:hover, .animelook i:hover{
        background-color: #00B4D8 !important;
    }
    /*搜尋、通知、訂閱、推薦*/
    ul.member a {
        color: #eaeaea;
    }
    .TOP-msg {
        border: 1px solid #249DB8!important;
    }
    .TOP-msg > span {
        background-color: inherit !important;
    }
    .TOP-msglist {
        background-color: #2a2a2a !important;
    }
    .TOP-msglist span{
        color: #d7d7d7 !important;
    }
    .TOP-msglist div:hover {
        /*移到上面時*/
        background-color: #747474 !important;
    }
    .TOP-msg .new {
        /*新通知*/
        border: 1px solid rgba(255, 255, 255, 0.39)!important;
    }
    .TOP-msgpic {
        /*圖片底色*/
        background-color: transparent !important;
    }
    .TOP-msgbtn {
        /*最下面那條*/
        background-color: #2a2a2a !important;
        border-top: 1px solid #249DB8 !important;
    }
    .TOP-msg [href] {
        /*超連結顏色*/
        color: #87DFFF !important;
    }

    /*作品最愛*/
    .open_win {
        background-color: inherit !important;
    }
    /*彈幕*/
    .subtitle {
        background: transparent;
    }
    .sub_list li {
        background: transparent !important;
    }
    .bullet-send {
        background: transparent !important;
    }
    .bullet-send-setting, .bullet-send-submit {
        background: inherit !important;
    }
    .bullet-send-setting:hover, .bullet-send-submit:hover {
        background: #00b4d8 !important;
    }
    .ani-setting-title {
        color: #13cef3;
    }
    .ani-setting-label {
        color: inherit !important;
    }
    /* 彈幕分頁 */
    .sub_top.ani-tabs {
        background-color: inherit !important;
    }
    .ani-tabs-link {
        background-color: inherit !important;
        color: #d7d7d7;
    }
    .ani-tabs-link.is-active {
        color: #fd8200;
    }
    .ani-tabs-link:hover {
        color: #fff;
    }
    /*移到彈幕上面時*/
    .sub_list li:hover {
        background-color: inherit !important;
    }
    .sub_content:hover,
    .name:hover {
        background-color: inherit !important;
    }
    /*過濾字詞*/
    input {
        background-color: inherit !important;
        color: rgb(215, 215, 215) !important;
    }
    .ani-keyword-body {
        background-color: inherit !important;
    }
    /*集數*/
    .anime-title {
        background-color: inherit !important;
        color: inherit !important;
    }
    .season a {
        color: inherit !important;
    }
    /*作品簡介*/
    .data {
        background-color: inherit !important;
    }
    /*留言*/
    .whilebg {
        background-color: inherit !important;
    }
    ._5yk {
        background-color: inherit !important;
    }
    /*相關新聞*/
    .news_big a {
        color: inherit !important;
    }
    .news_big p {
        color: inherit !important;
    }
    .news_text a {
        color: inherit !important;
    }
    .arrange a {
        color: inherit !important;
    }
    /*移除FB點讚*/
    .fb-like {
        display: none !important;
        height: 0px !important;
    }
    /*廣告*/
    .anime-ad {
        display: block;
        opacity: 0!important;
        height: 0px !important;
        pointer-events: none !important;
        overflow-y: scroll !important;
    }
    /*--------------------------------------------------------------*/
    .title textarea {
        /*社團快速留言*/
        background-color: rgba(255, 255, 255, 0.2) !important;
        color: rgba(255, 255, 255, 1) !important;
        border: 1px solid rgba(255, 255, 255, 0.39)!important;
    }
    /*滑鼠移動到上面的顏色*/
    .fmb tr:hover td {
        background-color: rgba(0, 0, 0, 1)!important;
    }
    /*底色*/
    .fmb td {
        background-color: hsla(0, 0%, 18%, 0.60)!important;
        border-bottom: none !important;
    }
    /* 觀看紀錄頁面 */
    .history li, .history a {
        background-color: inherit !important;
        color: #FFF !important;
    }
    .anime-card, .more-btn, .watch-list-card {
        background-color: inherit !important;
        color: #FFF !important;
    }
    /* 付費頁面 */
    .cart_header, .pay_confirm{
        background-color: inherit !important;
        color: #FFF !important;
    }
    .cart .program{
        background: inherit !important;
        color: #8f8f8f;
    }
}

